# ChangeLog for media-libs/lightmediascanner
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lightmediascanner-9999 (20 Jul 2009)

  20 Jul 2009; evadim <evadim@evadim.ru> +lightmediascanner-9999.ebuild,
  +metadata.xml:
  initial import
