@@ -1,5 +1,5 @@
 DIST lightmediascanner-0.4.1.0.tar.bz2 293007 RMD160 827ff715a8fa669aadf79dbba6ff4dbe5b29188b SHA1 34273e08e0433eaeec1a4b46245160dbe70a0fbf SHA256 fa679d473ba85f5046eddae550f1810f69a9b1c481a57bbed75076ee11f9f88d
 EBUILD lightmediascanner-0.4.1.0.ebuild 1014 RMD160 88c73d0388baed2904cf32aeb6b8b86e6e17873d SHA1 54aee67258ed73f9f7a81e30b81f314386ef1a29 SHA256 bc568868aa5beb9bdca06b66cebe502ef34792082d669ef27a54cf7ce488d270
-EBUILD lightmediascanner-9999.ebuild 705 RMD160 53301c777dd9ddf891fa082f7745312004e48d98 SHA1 de2d0a8b9a114df5a1aee0ffcd2de26d6d4676cd SHA256 3869b48f6e6256d64d8b0027f98df48e15588cf4ce25dcef3a51d6335d259ee5
-MISC ChangeLog 276 RMD160 c704f1a41af66303386dee46e722c9b2f4815b80 SHA1 a946617456eface637606be59a547538fb778cff SHA256 96d5fdfcf235f08becf7cc1987869541d150576bdefe5fde23cadcd08dc88d87
+EBUILD lightmediascanner-9999.ebuild 1085 RMD160 a92723ae5efc8deb3aec574fd11cd0297ca492d3 SHA1 84c30d84ec43b1cab9d2d3f66b1a0a9fe2ee0131 SHA256 0bcd804217a6f34e08409fcdc32ec43e7970810385e36fae03c9270bb4eab74a
+MISC ChangeLog 367 RMD160 007190886d8e3182bef320845c18387a88b1d614 SHA1 bfcf25feff3de09d62a031459f763f64c4fafbb4 SHA256 d4cd7df63e8cdeeb74bad0ef954039f77a2fdfae3e2bd81b1f821bd5eebddd60
 MISC metadata.xml 228 RMD160 1890a2965ed780e661e20adcfc4f4cce5f7ca8e9 SHA1 777d2a3ad7f7075c7e75fa5055f3941440e4e875 SHA256 42ea435327140212f3beb05aafebad5053cbad84532f9bb78987de8540c6459a
