@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/lightmediascanner
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  09 Mar 2011; evadim <evadim@evadim.ru> lightmediascanner-9999.ebuild:
+  fix live ebuild
 
 *lightmediascanner-9999 (20 Jul 2009)
 
